--- a/source-code/pom.xml
+++ b/source-code/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>cloudfunctions</groupId>
-  <artifactId>gcs-function</artifactId>
+  <artifactId>gcs-function-load-data</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -16,7 +16,7 @@
       <groupId>com.google.cloud.functions</groupId>
       <artifactId>functions-framework-api</artifactId>
       <version>1.0.1</version>
-      <type>jar</type>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
@@ -24,13 +24,20 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <!--
+          Google Cloud Functions Framework Maven plugin
+
+          This plugin allows you to run Cloud Functions Java code
+          locally. Use the following terminal command to run a
+          given function locally:
+
+          mvn function:run -Drun.functionTarget=your.package.yourFunction
+        -->
+        <groupId>com.google.cloud.functions</groupId>
+        <artifactId>function-maven-plugin</artifactId>
+        <version>0.9.2</version>
         <configuration>
-          <excludes>
-            <exclude>.google/</exclude>
-          </excludes>
+          <functionTarget>functions.LoadData</functionTarget>
         </configuration>
       </plugin>
     </plugins>
